@@ -10,6 +10,10 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
+		<li/> New feature:  
+			When viewing the logs screen, old logs are cleaned out as per a
+			configurable number of days.
+		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
 	 
 			Sites associated with a class and class sites now can properly
